--- a/css/style.css
+++ b/css/style.css
@@ -9,19 +9,62 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-header{
+header#main-header {
     height: 5rem;
+}
+
+header#main-header, .container{
     background-color: white;
 }
 
-header img{
+header#main-header img{
     height: 4em;
     padding-left: 1em;
     padding-top: 0.5em;
 }
 
-header h1{
-    font-size: 2.9rem;
+header#main-header h1{
+    font-size: 3rem;
     display: inline-block;
     vertical-align:text-bottom;
+}
+
+main{
+    width: 95rem;
+    height: 110rem;
+    margin: 70px auto;
+}
+
+.container{ 
+    border-radius: 1px;
+    margin-bottom: 5px;   
+}
+
+article#first-block{
+    height: 5em;
+    padding: 1.5em 3em;
+}
+
+.input-bar button{
+    font-size: 1em;
+    border-radius: 10%;
+    padding: 0.6em 0.9em;
+    font-weight: bold;
+}
+
+#task-button{
+    background-color: #47adf1;
+    color: white;
+    border-color: #49aef1;
+}
+
+#section-button{
+    background-color: white;
+    color: #c6ccd1;
+    border-color: #c6ccd1;
+}
+
+article#second-block{
+    height: 90em;
+    font-weight: bold;
 }
